--- a/Plugins/EnhancedSaveSystem/EnhancedSaveSystem.uplugin
+++ b/Plugins/EnhancedSaveSystem/EnhancedSaveSystem.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
+	"Version": 2,
+	"VersionName": "1.1",
 	"EngineVersion": "5.0.0",
 	"FriendlyName": "EnhancedSaveSystem",
 	"Description": "",
@@ -9,7 +9,7 @@
 	"CreatedBy": "devran",
 	"CreatedByURL": "",
 	"DocsURL": "https://docs.google.com/document/d/1uSqJvRJiZE3B6u37jD2nAxBIY9AljfIh533BWuDST3Q/edit?usp=sharing",
-	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/{ID}",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/654dace57d154d6eaa44b08a2e26a648",
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
