Changed project name and version and added copyright notice

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=173271EF4D44998BB1FA38B935739C8B
-ProjectName=Third Person BP Game Template
+ProjectName=Save System Project
+CopyrightNotice=Copyright 2023 devran. All Rights Reserved.
+ProjectVersion=2.0
+
