Changed default game mode, instance, and map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,15 +2,15 @@
 GameName=SaveSystemProject
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/SaveSystem/Maps/TestMap.TestMap
+GameDefaultMap=/Game/SaveSystem/Maps/TestMap.TestMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/SaveSystem/Blueprints/BP_SaveGameMode.BP_SaveGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/ThirdPerson/Blueprints/BP_TestGameInstance.BP_TestGameInstance_C
+GameInstanceClass=/Game/SaveSystem/Blueprints/BP_SaveGameInstance.BP_SaveGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
