Changed plugin details

--- a/Plugins/EnhancedSaveSystem/EnhancedSaveSystem.uplugin
+++ b/Plugins/EnhancedSaveSystem/EnhancedSaveSystem.uplugin
@@ -1,15 +1,15 @@
 {
 	"FileVersion": 3,
-	"Version": 7,
-	"VersionName": "1.7",
-	"EngineVersion": "5.4.0",
+	"Version": 8,
+	"VersionName": "2.0",
+	"EngineVersion": "5.5.0",
 	"FriendlyName": "EnhancedSaveSystem",
 	"Description": "",
 	"Category": "Other",
 	"CreatedBy": "devran",
 	"CreatedByURL": "",
 	"DocsURL": "https://docs.google.com/document/d/1uSqJvRJiZE3B6u37jD2nAxBIY9AljfIh533BWuDST3Q/edit?usp=sharing",
-	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/654dace57d154d6eaa44b08a2e26a648",
+	"FabURL": "com.epicgames.launcher://ue/Fab/product/654dace57d154d6eaa44b08a2e26a648",
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
